Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-114816

serialization/deserialization of Any fails

    XMLWordPrintable

Details

    • All
    • 4014d708a (dev), d3943fb90 (6.6)

    Description

      In my application serializing and later deserializing protobuf-generated class instances that contain QtProtobuf::Any doesn't work out; see attached code.
      I did not (even though that might have been helpful) try deserializing a byte stream with some other method (such as python's protobuf support) to see if the serialization part is actually ok; it seems like that ought to be part of the tests though IMHO – to deserialize stuff using a different language/library to make sure compatibility is there.

      Reported_by_support_standard

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            semlanik Alexey Edelev
            glenm Glen Mabey
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes