Do not omit the field header of the protobuf Any messages

Any serializerProxy method uses serializeMessage call that explicitly
treats the respective fields as standalone protobuf messages.

Meanwhile this disregards the situation when Any field is the part
of another message and requires the proper header of the protobuf
field.

This replaces the serializeMessage with the serializeObject.

Fixes: QTBUG-114816
Pick-to: 6.6
Change-Id: I3b7c243164ba56b8932a09008d95e2f6056304b0
Reviewed-by: Tatiana Borisova <tatiana.borisova@qt.io>
Reviewed-by: Konrad Kujawa <konrad.kujawa@qt.io>
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>